Retarget build to Java 8, fixing a crash on every pre-1.18 instance